Roll back jumping background fix attempt, add iamge with new resolution

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -133,28 +133,12 @@ section {
 }
 
 .image-bg-1 {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
     height: 30vh;
-    z-index: -1;
-    transform: scale(1.0);
-}
-.image-bg-1:after {
-    content: "";
-    display: block;
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100vh;
-    background-image: url(../images/gabriel-jimenez-soil_hands-unsplash.webp);
-    background-position: top 20% center;
+    background-image: url(../images/gabriel-jimenez-hands-hold-soil-unsplash.webp);
+    background-position: top 50% center;
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
-
 }
 
 .background-1 {
